<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="64dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPregunta" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/numBole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/rgBoletos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbVIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbVIP" />

        <RadioButton
            android:id="@+id/rbLuneta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbLuneta" />

        <RadioButton
            android:id="@+id/rbPrefe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPrefe" />

        <RadioButton
            android:id="@+id/rbGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbGeneral" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    
</LinearLayout>